fixed a math error. added a fixed limit to the number of bins in the fine histogram.