@@ -223,10 +223,8 @@
             </classpath>
             <formatter type="plain" usefile="true"/>
             <jvmarg value="-enableassertions" />
-            <!--
             <jvmarg value="-Xmx2048m" />
             <jvmarg value="-XX:MaxPermSize=512m" />
-            -->
             <sysproperty key="java.util.logging.config.file" value="${src.out.dir}/logging.properties"/>
             <test name="${test}" fork="yes" haltonfailure="yes">
                 <formatter type="plain" usefile="false"/>
@@ -296,6 +294,8 @@
 
             <jvmarg line="-enableassertions -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y"/>
  
+            <jvmarg value="-Xmx2048m" />
+            <jvmarg value="-XX:MaxPermSize=512m" />
             <sysproperty key="java.util.logging.config.file" value="${src.out.dir}/logging.properties"/>
             
             <classpath>
